--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -9,7 +9,7 @@
       "login": "navdeepsuppal",
       "name": "Navdeep Singh Uppal",
       "avatar_url": "https://avatars3.githubusercontent.com/u/20843596?s=460&u=7f184b911f73ae1dc5765ab686fff2b2e984830f&v=4",
-      "profile": "https://github.com/navdeepsuppal",
+      "profile": "https://github.com/navdeepuppal",
       "contributions": [
         "code",
         "doc",
@@ -76,7 +76,7 @@
     },
     {
       "login": "a-mishra",
-      "name": "Ashutosh Mishra",
+      "name": "Navdeep Uppal",
       "avatar_url": "https://avatars0.githubusercontent.com/u/10567548?v=4",
       "profile": "http://a-mishra.github.io",
       "contributions": [
